--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "sass-watch": "sass --watch ./src"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -24,7 +23,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "sass": "^1.90.0",
     "vite": "^7.1.0"
   }
 }
