--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
     "vite": "^7.1.0"
   }
 }
