fix(global): fix profileStore, add js-cookie lib, merge checking functions, add linkPath

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-focus-lock": "^2.13.6",
